--- a/render.yaml
+++ b/render.yaml
@@ -11,7 +11,7 @@ services:
       python -c "import nltk; nltk.download('stopwords')"
       echo "Setting up models directory..."
       mkdir -p models
-      cp backend/models/fake_news_model.joblib models/ || echo "WARNING: Model copy failed, app will use fallback"
+      cp backend/models/fake_news_model.pkl models/ || echo "WARNING: Model copy failed, app will use fallback"
       echo "Building React frontend..."
       cd frontend && npm install && npm run build && cd ..
       echo "Copying static files..."
