--- a/render.yaml
+++ b/render.yaml
@@ -1,25 +1,7 @@
 services:
   - type: web
     name: fake-news-detector
-    env: python
+    env: docker
     plan: free
     region: oregon
-    buildCommand: |
-      echo "Installing Python dependencies..."
-      pip install -r requirements.txt
-      echo "Downloading NLTK data..."
-      python -c "import nltk; nltk.download('stopwords')"
-      echo "Setting up models directory..."
-      mkdir -p models
-      cp backend/models/fake_news_model.pkl models/ || echo "WARNING: Model copy failed, app will use fallback"
-      echo "Building React frontend..."
-      cd frontend && npm install && npm run build && cd ..
-      echo "Copying static files..."
-      mkdir -p static
-      cp -r frontend/build/* static/
-      echo "Build completed successfully!"
-    startCommand: python waitress-serve.py
-    envVars:
-      - key: PYTHON_VERSION
-        value: 3.11.0
     healthCheckPath: /health
